--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
+    "noImplicitAny": false, // 是否在表达式和声明上有隐含的any类型时报错
     "jsx": "preserve",
     "incremental": true,
     "plugins": [
