--- a/.env
+++ b/.env
@@ -7,8 +7,8 @@
 DATABASE_URL="mongodb+srv://wushide404:ZD80233344@cluster0.jlktsug.mongodb.net/test"
 NEXTAUTH_SECRET='NEXTAUTH_SECRET'
 
-GITHUB_ID=
-GITHUB_SECRET=
+GITHUB_ID=144e3a840b0897d8fc03
+GITHUB_SECRET=c5d571dba0602b93fbf223ad665c553c8e23a8bd
 
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
+GOOGLE_CLIENT_ID=265890146833-fgv8dd1bbmidm4ukj4an74cb3gr64rlm.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
